<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.CalculatorFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.MainActivity"
            android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/textInputLayout"
                android:layout_marginTop="64dp"
                app:layout_constraintHorizontal_bias="0.495"
                android:hint="@string/package_name">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:inputType="text"
                    android:ems="10"
                    android:id="@+id/packageNameInput"
                    app:layout_constraintHorizontal_bias="0.497"
                    android:layout_marginTop="128dp"
                    android:minHeight="48dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button.IconButton"
                android:id="@+id/select_app_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_android"
                android:contentDescription="@string/select"
                android:tooltipText="@string/select"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="74dp"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout"
                android:layout_marginStart="245dp"/>

        <com.google.android.material.button.MaterialButton
                android:text="@string/calc"
                android:layout_width="104dp"
                android:layout_height="51dp"
                android:id="@+id/calc"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                app:layout_constraintHorizontal_bias="0.498"
                style="@style/Widget.Material3.Button.TonalButton"
                app:cornerRadius="6dp"/>

        <com.google.android.material.textfield.TextInputLayout
                style="?attr/textInputFilledStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:orientation="vertical"
                app:layout_constraintHorizontal_bias="0.492"
                android:id="@+id/textInputLayout2"
                app:layout_constraintTop_toBottomOf="@+id/calc"
                android:layout_marginTop="32dp">

            <com.google.android.material.textfield.TextInputEditText
                    style="?attr/textInputFilledStyle"
                    android:layout_width="330dp"
                    android:layout_height="410dp"
                    android:ems="10"
                    android:textIsSelectable="true"
                    android:editable="false"
                    android:hint="@string/ara_m"
                    android:text="@string/blank"
                    android:gravity="top"
                    android:id="@+id/ARAMOutput"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.card.MaterialCardView
                style="@style/Widget.Material3.CardView.Elevated"
                app:cardBackgroundColor="?attr/colorTertiaryContainer"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="330dp"
                android:layout_height="100dp"
                android:layout_marginBottom="24dp"
                android:id="@+id/materialCardView">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:padding="20dp"
                        android:src="@drawable/ic_sim_card"
                        android:importantForAccessibility="no"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center_vertical">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:layout_marginBottom="5dp"
                            android:text="@string/support_omapi_slot"/>

                    <TextView
                            android:id="@+id/support_omapi_slot"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"/>
                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>